--- a/TeduCoreApp/Areas/Admin/Views/ProductCategory/Index.cshtml
+++ b/TeduCoreApp/Areas/Admin/Views/ProductCategory/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using Microsoft.AspNetCore.Authorization
+@using TeduCoreApp.Authorization
+@inject IAuthorizationService AuthorizationService
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -26,7 +28,14 @@
 
     <div class="title_right">
         <div class="col-md-4 col-sm-12  form-group pull-right top_search">
-            <button class="btn btn-success" id="btnCreate" type="button">Create</button>
+            @{
+                var result = await AuthorizationService.AuthorizeAsync(User, "PRODUCT_CATEGORY", Operations.Create);
+            }
+            @if (result.Succeeded)
+            {
+                <button class="btn btn-success" id="btnCreate" type="button">Create</button>
+            }
+
         </div>
     </div>
 </div>
@@ -38,8 +47,14 @@
             <div class="x_content">
                 <ul id="treeProductCategory"></ul>
                 <div id="contextMenu" class="easyui-menu" style="width:120px;">
-                    <div id="btnEdit" data-options="iconCls:'icon-edit'">Sửa</div>
-                    <div id="btnDelete" data-options="iconCls:'icon-remove'">Xoá</div>
+                    @if ((await AuthorizationService.AuthorizeAsync(User, "PRODUCT_CATEGORY", Operations.Update)).Succeeded)
+                    {
+                        <div id="btnEdit" data-options="iconCls:'icon-edit'">Sửa</div>
+                    }
+                    @if ((await AuthorizationService.AuthorizeAsync(User, "PRODUCT_CATEGORY", Operations.Update)).Succeeded)
+                    {
+                        <div id="btnDelete" data-options="iconCls:'icon-remove'">Xoá</div>
+                    }
                 </div>
             </div>
         </div>
