--- a/TeduCoreApp/Areas/Admin/Views/Product/Index.cshtml
+++ b/TeduCoreApp/Areas/Admin/Views/Product/Index.cshtml
@@ -124,8 +124,9 @@
 </script>
 
 
-@Html.Partial("_AddEditModal.cshtml")
-@Html.Partial("_ImportExcelModal.cshtml")
-@Html.Partial("_QuantityManagement.cshtml")
-@Html.Partial("_ImageManagement.cshtml")
-@Html.Partial("_WholePriceManagement.cshtml")
+<partial name="_AddEditModal.cshtml" model="null" />
+<partial name="_ImportExcelModal.cshtml" model="null" />
+<partial name="_QuantityManagement.cshtml" model="null" />
+<partial name="_ImageManagement.cshtml" model="null" />
+<partial name="_WholePriceManagement.cshtml" model="null" />
+@*@Html.Partial("_AddEditModal.cshtml")*@
