End of section 51

--- a/TeduCoreApp/Views/Home/_BestSellerProducts.cshtml
+++ b/TeduCoreApp/Views/Home/_BestSellerProducts.cshtml
@@ -16,7 +16,7 @@
                             <div class="item-inner">
                                 <div class="item-img">
                                     <div class="item-img-info">
-                                        <a class="product-image" title="@item.Name" ref="@url"> <img alt="@item.Name" src="~/client-side/images/products/img15.jpg"> </a>
+                                        <a class="product-image" title="@item.Name" href="@url"> <img alt="@item.Name" src="~/client-side/images/products/img15.jpg"> </a>
                                         <div class="jtv-box-hover">
                                             <ul class="add-to-links">
                                                 <li><a class="link-quickview" href="quick_view.html"><i class="icon-magnifier-add icons"></i><span class="hidden">Quick View</span></a></li>
@@ -28,7 +28,7 @@
                                 </div>
                                 <div class="item-info">
                                     <div class="info-inner">
-                                        <div class="item-title"> <a title="@item.Name" ref="@url"> @item.Name </a> </div>
+                                        <div class="item-title"> <a title="@item.Name" href="@url"> @item.Name </a> </div>
                                         <div class="item-content">
                                             <div class="rating"> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> </div>
                                             <div class="item-price">
