--- a/TeduCoreApp/Views/Product/Search.cshtml
+++ b/TeduCoreApp/Views/Product/Search.cshtml
@@ -1,8 +1,9 @@
-﻿@model CatalogViewModel
+﻿
+@model SearchResultViewModel
 @{
-    ViewData["Title"] = Model.Category.Name;
-    ViewData["MetaKeyword"] = Model.Category.SeoKeywords;
-    ViewData["MetaDescription"] = Model.Category.SeoDescription;
+    ViewData["Title"] = "Search results of " + Model.Keyword;
+    ViewData["MetaKeyword"] = "Search results of " + Model.Keyword;
+    ViewData["MetaDescription"] = "Search results of " + Model.Keyword;
 }
 
 <!-- Breadcrumbs -->
@@ -12,7 +13,7 @@
             <div class="col-xs-12">
                 <ul>
                     <li class="home"> <a href="index.html" title="Go to Home Page">Home</a> <span>/</span> </li>
-                    <li> <strong>@Model.Category.Name</strong> </li>
+                    <li> <p><strong>Result search for </strong> @Model.Keyword</p> </li>
                 </ul>
             </div>
         </div>
@@ -25,10 +26,11 @@
         <div class="row">
             <div class="col-sm-12 col-xs-12">
                 <article class="col-main">
-                    <h2 class="page-heading"> <span class="page-heading-title">@Model.Category.Name</span> </h2>
+                  @*  <h2 class="page-heading"> <span class="page-heading-title">@Model.Category.Name</span> </h2>*@
                     <div class="toolbar">
                         <div class="row">
-                            <form action="/@Model.Category.SeoAlias-c.@(Model.Category.Id).html" method="get">
+                            <form action="search.html" method="get">
+                                <input type="hidden" name="keyword" value="@Model.Keyword" />
                                 <div class="col-md-4 col-sm-5">
                                     <div class="btn-group">
                                         <div id="grid-view" class="btn btn-default active" data-toggle="tooltip" title="Grid"><a href="shop_grid.html"><i class="fa fa-th"></i></a></div>
@@ -93,7 +95,7 @@
                         </ul>
                     </div>
                 </article>
-               
+
                 <!--	///*///======    End article  ========= //*/// -->
             </div>
 
