--- a/TeduCoreApp/Views/Shared/_Layout.cshtml
+++ b/TeduCoreApp/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
     <script type="text/javascript" src="~/client-side/js/rev-slider.js"></script>
     @RenderSection("Scripts", required: false)
     <!--Newsletter Popup Start-->
-    <div id="myModal" class="modal fade">
+    @*<div id="myModal" class="modal fade">
         <div class="modal-dialog newsletter-popup">
             <div class="modal-content">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
     <!--End of Newsletter Popup-->
 </body>
 </html>
