End of lesson 55

--- a/TeduCoreApp/Views/Home/_SpecialProducts.cshtml
+++ b/TeduCoreApp/Views/Home/_SpecialProducts.cshtml
@@ -21,7 +21,7 @@
                                         <a class="product-image" title="Product Title Here" href="@url"> <img alt="Product Title Here" src="@item.Image"> </a>
                                         <div class="jtv-box-hover">
                                             <ul class="add-to-links">
-                                                <li><a class="link-quickview" href="quick_view.html"><i class="icon-magnifier-add icons"></i><span class="hidden">Quick View</span></a></li>
+                                                <li><a class="link-quickview" data-id="@item.Id" href="#"><i class="icon-magnifier-add icons"></i><span class="hidden">Quick View</span></a></li>
                                                 <li><a class="link-wishlist" href="wishlist.html"><i class="icon-heart icons"></i><span class="hidden">Wishlist</span></a></li>
                                                 <li><a class="link-compare" href="compare.html"><i class="icon-shuffle icons"></i><span class="hidden">Compare</span></a></li>
                                             </ul>
@@ -37,7 +37,7 @@
                                                 <div class="price-box"> <span class="regular-price"> <span class="price">@item.Price.ToString("N0")</span> </span> </div>
                                             </div>
                                             <div class="action">
-                                                <button class="button btn-cart" type="button" title="" data-original-title="Add to Cart"><span>Add to Cart</span> </button>
+                                                <button class="button btn-cart" data-id="@item.Id" type="button" title="" data-original-title="Add to Cart"><span>Add to Cart</span> </button>
                                             </div>
                                         </div>
                                     </div>
