--- a/TeduCoreApp/Views/Shared/Components/CategoryMenu/Default.cshtml
+++ b/TeduCoreApp/Views/Shared/Components/CategoryMenu/Default.cshtml
@@ -6,7 +6,7 @@
 <div class="nav-inner">
     <ul id="nav" class="hidden-xs">
         <li class="drop-menu">
-            <a href="index.html" class="level-top active"><span>Home</span></a>
+            <a href="/" class="level-top active"><span>Home</span></a>
         </li>
         @foreach (var item in Model.Where(x => x.ParentId == null))
         {
