--- a/TeduCoreApp/Views/_ViewImports.cshtml
+++ b/TeduCoreApp/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using TeduCoreApp.Models.AccountViewModels
 @using TeduCoreApp.Data.Entities
 @using TeduCoreApp.Application.ViewModels.Product
+@using TeduCoreApp.Application.ViewModels.Bill
 @using TeduCoreApp.Application.ViewModels.System
 @using TeduCoreApp.Application.ViewModels.Blog
 @using TeduCoreApp.Application.ViewModels.Common
@@ -12,3 +13,4 @@
 @using TeduCoreApp.Extensions
 @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, TeduCoreApp
